syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";

package com.evernym.verity.actor.msgoutbox;

message ComMethod {
    int32 typ = 1;
    string value = 2;
    Packaging packaging = 3;
}

message Packaging {
    string pkgType = 1;
    repeated string recipientKeys = 2;
}