syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";

package com.evernym.verity.msgoutbox.outbox;

message RetentionCriteria {
  int32 afterEveryEvents = 1;
  int32 keepSnapshots = 2;
  bool deleteEventsOnSnapshots = 3;
}

message RetryPolicy {
  int32 maxRetries = 1;
  int64 initialIntervalMs = 2;
}

message OutboxConfig {
  int32 batchSize = 1;
  int64 receiveTimeoutMs = 2;
  int64 scheduledJobIntervalMs = 3;
  RetentionCriteria retentionCriteria = 4 [(scalapb.field).no_box = true];
  map<string, RetryPolicy> retryPolicy = 5;
  string eventEncryptionSalt = 6;
  int64 oauthReceiveTimeoutMs = 7;
}