syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";
import "outbox-common.proto";
import "outbox/outbox-config.proto";

package com.evernym.verity.msgoutbox.outbox.States;

message Uninitialized {
    option (scalapb.message).extends = "com.evernym.verity.msgoutbox.outbox.Outbox.State";
    OutboxConfig config = 1 [(scalapb.field).no_box = true];
}

message MetadataReceived {
    option (scalapb.message).extends = "com.evernym.verity.msgoutbox.outbox.Outbox.State";
    Metadata metadata = 1;
    OutboxConfig config = 2 [(scalapb.field).no_box = true];
}

message Initialized {
    option (scalapb.message).extends = "com.evernym.verity.msgoutbox.outbox.Outbox.State";
    string walletId = 1;
    string senderVerKey = 2;

    // map of comMethodId and ComMethod
    map<string, ComMethod> comMethods = 3;

    // map of msgId and Message
    map<string, Message> messages = 4;

    Metadata metadata = 5;

    OutboxConfig config = 6 [(scalapb.field).no_box = true];
}

message Message {
    option (scalapb.message).extends = "com.evernym.verity.msgoutbox.outbox.Outbox.MessageBase";
    uint64 creationTimeInMillis = 1;
    uint64 expiresAfterMillis = 2;
    string deliveryStatus = 3;

    // map of comMethodId and its delivery attempt detail
    map <string, MsgDeliveryAttempt> deliveryAttempts = 4;
}

message MsgDeliveryAttempt {
    int32 successCount = 1;
    int32 failedCount = 2;
}

message Metadata {
    string relId = 1;
    string recipId = 2;
    string destId = 3;
}